Fixed dialog overflow issue on FF/Edge

--- a/src/WebComponents/App/app.scss
+++ b/src/WebComponents/App/app.scss
@@ -157,10 +157,7 @@
 
             > main {
                 position: relative;
-                -webkit-flex: 0 1 auto;
-                -moz-flex: 0 1 auto;
-                -ms-flex: 0 1 auto;
-                flex: 0 1 auto;
+                @include flex();
                 margin-top: calc(var(--theme-h1) + var(--theme-h5) * 2);
                 z-index: 1;
             }
